--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^2.1.1",
     "live-server": "^1.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
+    "react-dates": "^20.2.0",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
     "react-redux": "^7.0.3",
