--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # To get this folder back, run "yarn install"
 node_modules/
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
 
 .vscode/
