Setup dev dependencies and dist folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # To get this folder back, run "yarn install"
 node_modules/
-public/bundle.js
-public/bundle.js.map
-public/styles.css
-public/styles.css.map
+public/dist/
 
 .vscode/
