--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "author": "Eduardo Rosas <lalorosas@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -22,13 +21,9 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^2.1.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.2",
     "enzyme-to-json": "^3.3.5",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "^24.8.0",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -40,16 +35,20 @@
     "react-modal": "^3.8.1",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
-    "react-test-renderer": "^16.8.6",
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "validator": "^10.11.0",
-    "webpack": "^4.31.0",
-    "webpack-dev-server": "^3.4.1"
+    "webpack": "^4.31.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.2"
+    "chalk": "^2.4.2",
+    "webpack-cli": "^3.3.2",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
+    "jest": "^24.8.0",
+    "react-test-renderer": "^16.8.6",
+    "webpack-dev-server": "^3.4.1"
   }
 }
