--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "raf": "^3.4.1",
     "react": "^16.8.6",
     "react-dates": "^20.2.0",
@@ -44,11 +45,11 @@
   },
   "devDependencies": {
     "chalk": "^2.4.2",
-    "webpack-cli": "^3.3.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.2",
     "jest": "^24.8.0",
     "react-test-renderer": "^16.8.6",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
   }
 }
